package game;

import java.awt.Rectangle;

interface Collidable {
  Rectangle getBounds();
}
