' Generated by UML Generator
' Encoded: jLTjRzis4FxkNo4WNvGbDh9kmu2W2-esMP8YJemupGkA8g0bMkP2KG99EV6wvhVtZf8eKhATRi6-9F9pH_Bk-DmBtobDf2vItbCFJEH4aZI8E55ggBLaqqBJqoWJ4_Ot3VPwSnRJ868ouhJNCrh1EEFB91F1rruGzDMSv7GVC2Oq_Dx9CyKqouG3oKoJ4egpOWhxmB8-2ggDGYOcpYwVl-m6J8pzVH2wREspZNiaL1i55MxRzOY31vemeS8SiKe4AjCiuvG8QnSDOvf8IjL-K2eiCXQZXJCcug6a1FTjx4Rq0nMQIdjUxriTc0_miupAazaDlvRsIq50xG_ZF-g7fUfkiAp-MpNZNYp9OvZi1yUIv7CMgSP0zFnzLeZOU7v98qr40aPQQoPmozKTTKv6sGid5tcCqN4EDBPCPQ7cNNligOUKwFbbKSNXgy8hYxu5nvV3wzEhkpgKmH_1tk0tJ-FZfz7uVd9rUNH-V7NYwFL_VkFfZIwkZ-uduwEZGqV9R1KLKiBLJF1MmKAIKlC9Oliz61sTVp8XeHmYHkD3DfkngE0QWj1yemPdYueK-8iIjNnVQ8tiQ_HA1EKfZLcHRjAO4nblakUSs1D6L1I-P9W0cMlns0UCxq2bVKF0UWMLfIALXhSyo-ITosJGqRDCfk3ZK4goF6DAlnrNu044JT17Ht8GRfkuvUo1UaicYApN1wBvwW2irUPqfiUIAaLZcwcWEoDS6PibI-OR5VugqdoJF8N0ZWh58eWLPxdDXvgrfHbCC5s6pg5_ZPhujF6BAJWA9LAr1QSYBxGBcjgBVFmpamqDGZ-loyDNPJV8UQRe6PlHrfepv2jYTI46VkXrwOhtZt8asaiwQ0mJoKjgwDF50aBsWjuDrBorAZispLFG3ObCW3mJw4eY-VobKskQD37LPckQFVcnsk9aIdczGttRpyswq5-o6tWBa0pFJIDPrKIUsmLwDw22G8er_EkMo5RsbwKoNbk9ZCtjHPijtmrMRxUzskIw6dPi1csWbizJnpZhKgiY6O-UM-2Fn9gpw27i1CoKc2fAb6jowrJ-LdCuFRztfR_ixVdouQqd__NtlKvpWHPnrMamRvhMYSPqUkSZY_My-fvJB5ElxgI6RCRhdIUdSEyiLynHcEfCMCzmMhfhZqcttYI3o9sFADInHpdcAbHThX14F1FK6uG854998bqEb45T5ylyV1fhsr6tbkwF7B_hWR5qgbxwgkcm6teCn5ZNXRAS5J4KRUp7hgXg1oKtfwPU-nMekg2wRVmRshnYz2lxXnr56xfut6aED_D9Spp-N7Zh5jx2J1nBFDujXDPHx9h_8JiIIHPCBni6-nCBx9597j_OZThPj3fGJ5rKjeR-x0yHl7xg9CJrifCHeBLOanEWlLYL5VzFhi4UndkdnGDqOgBfOB3UkZnTKSytSAULkzZGoxp5f6g6AIqBqriz-cpvzDcQ5hCPJg2dAKcQFC0jGm5_cZx5n8r33YPEMlHuOOofwRD-w52SqZpKBAKURy1VXi-u6OaepCsSinZRTjcvriUeVll-rEzNzQf6-ls32Z7FmC7WdmDdtvvvZVNx0DQ5hMUVIWR6s3GGxjzv9NXIvutWuUt7WISq3uIEEZmHB9QLc2bNFceQNmi2fthE53OOr37ep3Z6HyVcziJGbfSztmzOsH6RGsntCMhLHJHerjnHNQVRjr8LoZRyZeguIFbt
' URL: http://www.plantuml.com/plantuml/uml/jLTjRzis4FxkNo4WNvGbDh9kmu2W2-esMP8YJemupGkA8g0bMkP2KG99EV6wvhVtZf8eKhATRi6-9F9pH_Bk-DmBtobDf2vItbCFJEH4aZI8E55ggBLaqqBJqoWJ4_Ot3VPwSnRJ868ouhJNCrh1EEFB91F1rruGzDMSv7GVC2Oq_Dx9CyKqouG3oKoJ4egpOWhxmB8-2ggDGYOcpYwVl-m6J8pzVH2wREspZNiaL1i55MxRzOY31vemeS8SiKe4AjCiuvG8QnSDOvf8IjL-K2eiCXQZXJCcug6a1FTjx4Rq0nMQIdjUxriTc0_miupAazaDlvRsIq50xG_ZF-g7fUfkiAp-MpNZNYp9OvZi1yUIv7CMgSP0zFnzLeZOU7v98qr40aPQQoPmozKTTKv6sGid5tcCqN4EDBPCPQ7cNNligOUKwFbbKSNXgy8hYxu5nvV3wzEhkpgKmH_1tk0tJ-FZfz7uVd9rUNH-V7NYwFL_VkFfZIwkZ-uduwEZGqV9R1KLKiBLJF1MmKAIKlC9Oliz61sTVp8XeHmYHkD3DfkngE0QWj1yemPdYueK-8iIjNnVQ8tiQ_HA1EKfZLcHRjAO4nblakUSs1D6L1I-P9W0cMlns0UCxq2bVKF0UWMLfIALXhSyo-ITosJGqRDCfk3ZK4goF6DAlnrNu044JT17Ht8GRfkuvUo1UaicYApN1wBvwW2irUPqfiUIAaLZcwcWEoDS6PibI-OR5VugqdoJF8N0ZWh58eWLPxdDXvgrfHbCC5s6pg5_ZPhujF6BAJWA9LAr1QSYBxGBcjgBVFmpamqDGZ-loyDNPJV8UQRe6PlHrfepv2jYTI46VkXrwOhtZt8asaiwQ0mJoKjgwDF50aBsWjuDrBorAZispLFG3ObCW3mJw4eY-VobKskQD37LPckQFVcnsk9aIdczGttRpyswq5-o6tWBa0pFJIDPrKIUsmLwDw22G8er_EkMo5RsbwKoNbk9ZCtjHPijtmrMRxUzskIw6dPi1csWbizJnpZhKgiY6O-UM-2Fn9gpw27i1CoKc2fAb6jowrJ-LdCuFRztfR_ixVdouQqd__NtlKvpWHPnrMamRvhMYSPqUkSZY_My-fvJB5ElxgI6RCRhdIUdSEyiLynHcEfCMCzmMhfhZqcttYI3o9sFADInHpdcAbHThX14F1FK6uG854998bqEb45T5ylyV1fhsr6tbkwF7B_hWR5qgbxwgkcm6teCn5ZNXRAS5J4KRUp7hgXg1oKtfwPU-nMekg2wRVmRshnYz2lxXnr56xfut6aED_D9Spp-N7Zh5jx2J1nBFDujXDPHx9h_8JiIIHPCBni6-nCBx9597j_OZThPj3fGJ5rKjeR-x0yHl7xg9CJrifCHeBLOanEWlLYL5VzFhi4UndkdnGDqOgBfOB3UkZnTKSytSAULkzZGoxp5f6g6AIqBqriz-cpvzDcQ5hCPJg2dAKcQFC0jGm5_cZx5n8r33YPEMlHuOOofwRD-w52SqZpKBAKURy1VXi-u6OaepCsSinZRTjcvriUeVll-rEzNzQf6-ls32Z7FmC7WdmDdtvvvZVNx0DQ5hMUVIWR6s3GGxjzv9NXIvutWuUt7WISq3uIEEZmHB9QLc2bNFceQNmi2fthE53OOr37ep3Z6HyVcziJGbfSztmzOsH6RGsntCMhLHJHerjnHNQVRjr8LoZRyZeguIFbt
' Generated on: 2026-03-10T13:12:53.397706

@startuml
skinparam classAttributeIconSize 0
hide circle

class Polygon {
  -shape: Point
  +position: Point
  +rotation: double
  --
  +Polygon(inShape: Point[], inPosition: Point, inRotation: double)
  +getPoints(): Point[]
  +contains(point: Point): boolean
  +rotate(degrees: int): void
  -findArea(): double
  -findCenter(): Point
}

class Coin {
  -x: int
  -y: int
  -size: int
  --
  +Coin(x: int, y: int, size: int)
  +draw(g: Graphics): void
  +getBounds(): Rectangle
}

class Star {
  -size: int
  --
  +Star(x: int, y: int, size: int)
  +update(): void
  +draw(brush: Graphics): void
}

class DeathRun {
  -{static} GRAVITY: double = 0.5
  -{static} JUMP_STRENGTH: double = -12
  -{static} MOVE_SPEED: double = 5
  -currentState: GameState = GameState.MENU
  -selectedDifficulty: Difficulty
  -lives: int
  -easyButton: DifficultyButton
  -mediumButton: DifficultyButton
  -hardButton: DifficultyButton
  -playButton: MenuButton
  -playAgainButton: PlayAgainButton
  -coin: Coin
  -player: Player
  -floorY: double
  -platforms: ArrayList<Platform> = new ArrayList<>()
  -spikes: ArrayList<Spike> = new ArrayList<>()
  -stars: ArrayList<Star> = new ArrayList<>()
  -leftPressed: boolean = false
  -rightPressed: boolean = false
  -jumpPressed: boolean = false
  -menuMusic: Clip
  --
  +DeathRun()
  -initPlayer(): void
  -initPlatform(): void
  -initObstacles(): void
  -initInput(): void
  -startGameForDifficulty(): void
  +getPlayerBounds(): Rectangle
  +loseLife(): void
  +getLives(): int
  +paint(brush: Graphics): void
  -paintMenu(brush: Graphics): void
  -paintPlaying(brush: Graphics): void
  -paintGameOver(brush: Graphics): void
  -paintWin(brush: Graphics): void
  +{static} main(args: String[]): void
}

class MenuButton {
  #box: Rectangle
  #label: String
  --
  ~MenuButton(box: Rectangle, label: String)
  ~contains(p: Point): boolean
  ~draw(g: Graphics, enabled: boolean): void
}

class DifficultyButton {
  -difficulty: Difficulty
  --
  ~DifficultyButton(box: Rectangle, label: String, difficulty: Difficulty)
  ~draw(g: Graphics, selected: boolean): void
  ~getDifficulty(): Difficulty
}

class PlayAgainButton {
  ~PlayAgainButton(box: Rectangle, label: String)
  ~click(): void
}

class Spike {
  -deltaX: double = 2
  -{static} MIN_X: double = 300
  -{static} MAX_X: double = 470
  -{static} MOVEMENT_SPEED: double = 2
  --
  +Spike(x: int, y: int, width: int, height: int)
  +update(): void
  +draw(brush: Graphics): void
}

class Point {
  +x: double
  +y: double
  --
  +Point(inX: double, inY: double)
  +getX(): double
  +getY(): double
  +setX(x: double): void
  +setY(y: double): void
  +clone(): Point
}

abstract class Obstacle {
  #xPts: int
  #yPts: int
  #pts: Point
  --
  +Obstacle(inShape: Point[], inPosition: Point, inRotation: double)
  +update(): void
  +getXPts(): int[]
  +getYPts(): int[]
  +draw(brush: Graphics): void
}

class Platform {
  -bounds: Rectangle
  --
  +Platform(x: int, y: int, width: int, height: int)
  +draw(g: Graphics): void
  +getBounds(): Rectangle
}

class Player {
  -x: double
  -y: double
  -width: int
  -height: int
  -vx: double
  -vy: double
  -onGround: boolean
  --
  +Player(x: int, y: int, width: int, height: int)
  +update(gravity: double, floorY: double, worldWidth: int): void
  +draw(g: Graphics): void
  +isOnGround(): boolean
  +getVx(): double
  +getVy(): double
  +setVx(vx: double): void
  +setVy(vy: double): void
  +getX(): double
  +getY(): double
  +setX(x: double): void
  +setY(y: double): void
  +getWidth(): int
  +getHeight(): int
  +setOnGround(b: boolean): void
  +getBounds(): Rectangle
}

abstract class Game {
  #on: boolean = true
  #width: int
  #height: int
  #buffer: Image
  --
  +Game(name: String, inWidth: int, inHeight: int)
  +paint(brush: Graphics): void
  +update(brush: Graphics): void
  -sleep(time: int): void
}

interface Collidable {
  ~getBounds(): Rectangle
}

Polygon *-- Point
Polygon --> Point
Coin ..|> Collidable
Star --|> Obstacle
DeathRun --|> Game
DeathRun *-- DifficultyButton
DeathRun *-- MenuButton
DeathRun *-- PlayAgainButton
DeathRun *-- Coin
DeathRun *-- Player
DeathRun o-- Platform
DeathRun o-- Spike
DeathRun o-- Star
MenuButton ..> Point
DifficultyButton --|> MenuButton
PlayAgainButton --|> MenuButton
Spike --|> Obstacle
Point ..> Point
Obstacle --|> Polygon
Obstacle o-- Point
Platform ..|> Collidable
Player ..|> Collidable
@enduml